Add Tumble cofounder experience to resume

--- a/current/main/output/index.html
+++ b/current/main/output/index.html
@@ -31,6 +31,19 @@
 
       <div class="job">
         <div class="job-header">
+          <h3 class="company">Tumble (trytumble.app)</h3>
+          <span class="dates">Oct 2025 - Present</span>
+        </div>
+        <div class="job-title">Co-Founder &amp; Tech Lead</div>
+        <ul class="achievements">
+          <li>Built consumer planner app from scratch as technical cofounder, owning full-stack development with TypeScript, Next.js, and React patterns</li>
+          <li>Led all architectural decisions including app structure, state management, and deployment pipeline</li>
+          <li>Conducted user testing with early adopters to inform product direction, progressing from concept to MVP in 4 months</li>
+        </ul>
+      </div>
+
+      <div class="job">
+        <div class="job-header">
           <h3 class="company">Ashvin AI</h3>
           <span class="dates">Jan 2024 - Jun 2025</span>
         </div>
