Update LinkedIn display text to /in/tejasunku

--- a/current/main/output/index.html
+++ b/current/main/output/index.html
@@ -17,7 +17,7 @@
         <span class="separator">|</span>
         <span>sunkut@outlook.com</span>
         <span class="separator">|</span>
-        <span><a href="https://www.linkedin.com/in/tejasunku" target="_blank">LinkedIn</a></span>
+        <span><a href="https://www.linkedin.com/in/tejasunku" target="_blank">/in/tejasunku</a></span>
       </div>
     </header>
 
