feat: add full resume and breadth assessment, update main resume with expanded AI/ML skills and achievements

--- a/current/main/output/index.html
+++ b/current/main/output/index.html
@@ -50,11 +50,11 @@
         <div class="job-title">Machine Learning, Operations (ML Ops)</div>
         <ul class="achievements">
           <li>Led migration of the core LLM routing service to an async architecture, increasing throughput by 10x without additional compute. Optimized performance by resolving blocking AWS SDK bottlenecks, delivering an additional 3x throughput gain</li>
+          <li>Designed multi-step document processing workflows using multimodal LLMs, converting PDF medical records to images and applying structured extraction/classification rubrics via prompt engineering</li>
+          <li>Evaluated 100+ real customer documents to refine LLM prompts, systematically removing extraction errors and improving output quality; assessed cost/performance tradeoffs across models to optimize for accuracy and latency</li>
           <li>Spearheaded Kubernetes adoption across backend services by converting legacy Python scripts into containerized FastAPI microservices, completing migrations in about 1 week per service. Coordinated cross-functional onboarding to enable same-day deployments and production rollouts, speeding up development</li>
-          <li>Designed a multi-repo integration test suite to validate cross-service dependencies, cutting release-time regressions across shared infrastructure by 50% and improving deployment reliability</li>
-          <li>Built resilient ingestion and export pipelines for medical systems including Brightree, HDMS, and TIMS, normalizing untyped legacy data into structured formats. Enabled same-week integration with clients using these systems, covering over 80% of prospective partners and accelerating onboarding</li>
-          <li>Unified Engineering and DevOps pipelines by redesigning CI/CD processes, cutting container build-to-deploy latency by about 70% through caching and parallelization. Developed a custom FastAPI metric measuring concurrent in-flight requests to replace unreliable CPU/RAM signals and improve Kubernetes autoscaling</li>
-          <li>Mentored junior engineers in debugging, AWS, and command-line best practices, accelerating interns&#39; onboarding and enabling them to independently lead significant feature development within their first month</li>
+          <li>Redesigned CI/CD pipelines and implemented multi-repo integration testing, cutting build-to-deploy latency by 70% and release-time regressions by 50%</li>
+          <li>Built resilient data ingestion and export pipelines for legacy systems, normalizing untyped data into structured formats and enabling same-week client integrations</li>
         </ul>
       </div>
 
@@ -99,22 +99,32 @@
 
         <div class="skill-category">
           <span class="skill-label">Languages:</span>
-          <span class="skill-items">Python, R, SAS, SQL, Bash, Javascript/Typescript</span>
+          <span class="skill-items">Python, SQL (Postgres), Bash, TypeScript</span>
         </div>
 
         <div class="skill-category">
-          <span class="skill-label">Tools &amp; Infra:</span>
-          <span class="skill-items">FastAPI, Pytest, AWS, Kubernetes, Github Actions</span>
+          <span class="skill-label">Cloud &amp; Infrastructure:</span>
+          <span class="skill-items">AWS, Kubernetes, Terraform, GitHub Actions, Datadog</span>
         </div>
 
         <div class="skill-category">
-          <span class="skill-label">ML / Data:</span>
-          <span class="skill-items">Pandas, Pytorch, Tensorflow, scikit-learn, SpaCy, OpenAI API</span>
+          <span class="skill-label">ML &amp; AI:</span>
+          <span class="skill-items">PyTorch, TensorFlow, Keras, scikit-learn, spaCy, Hugging Face, MLflow, OpenAI API</span>
         </div>
 
         <div class="skill-category">
-          <span class="skill-label">Other:</span>
-          <span class="skill-items">Prompt Engineering, CI/CD, Async programming, Documentation and Testing</span>
+          <span class="skill-label">Data Science:</span>
+          <span class="skill-items">pandas, NumPy, Jupyter, Tableau, PowerBI, Databricks</span>
+        </div>
+
+        <div class="skill-category">
+          <span class="skill-label">Web &amp; APIs:</span>
+          <span class="skill-items">FastAPI, Next.js, GraphQL, REST APIs</span>
+        </div>
+
+        <div class="skill-category">
+          <span class="skill-label">Practices:</span>
+          <span class="skill-items">CI/CD, Async Programming, Pytest, Documentation &amp; Testing</span>
         </div>
       </div>
     </section>
