feat: add US citizen status and graduating senior of the year honor

--- a/current/main/output/index.html
+++ b/current/main/output/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <h1 class="name">Teja Sunku</h1>
       <div class="contact-info">
-        <span>Redmond, WA (relocation ok)</span>
+        <span>Redmond, WA (US Citizen, relocation ok)</span>
         <span class="separator">|</span>
         <span>+1 (206) 445-3399</span>
         <span class="separator">|</span>
@@ -23,7 +23,7 @@
 
     <section class="section">
       <h2 class="section-title">Summary</h2>
-      <p class="summary">Experienced AI Infrastructure Engineer with strong proficiency in Python and AWS, led the migration of a core LLM routing service to async architecture, significantly enhancing performance. Successfully managed the transition to Kubernetes for improved service orchestration. Draws on substantial data science background, wishing to leverage skills in efficient data management and deployment resilience to drive key infrastructure projects.</p>
+      <p class="summary">Experienced AI Infrastructure Engineer with strong proficiency in Python and AWS, led the migration of a core LLM routing service to async architecture, significantly enhancing performance. Successfully managed the transition to Kubernetes for improved service orchestration. Combines data science expertise with production infrastructure experience to build scalable AI systems.</p>
     </section>
 
     <section class="section">
@@ -89,7 +89,7 @@
           <h3 class="school">University of Idaho</h3>
           <span class="dates">2017 - 2021</span>
         </div>
-        <div class="degree">B.S., Statistics &amp; Philosophy</div>
+        <div class="degree">B.S., Statistics &amp; Philosophy (Graduating Senior of the Year, College of Science)</div>
       </div>
     </section>
 
