feat: add CS minor to University of Idaho education

--- a/current/main/output/index.html
+++ b/current/main/output/index.html
@@ -89,7 +89,7 @@
           <h3 class="school">University of Idaho</h3>
           <span class="dates">2017 - 2021</span>
         </div>
-        <div class="degree">B.S., Statistics &amp; Philosophy (Graduating Senior of the Year, College of Science)</div>
+        <div class="degree">B.S., Statistics &amp; Philosophy, Minor in Computer Science (Graduating Senior of the Year, College of Science)</div>
       </div>
     </section>
 
